--- a/conf/test.config
+++ b/conf/test.config
@@ -1,28 +1,47 @@
 /*
- * -------------------------------------------------
- *  Nextflow config file for running tests
- * -------------------------------------------------
- * Defines bundled input files and everything required
- * to run a fast and simple test. Use as follows:
- *   nextflow run nf-core/rnavar -profile test,<docker/singularity>
- */
+========================================================================================
+    Nextflow config file for running minimal tests
+========================================================================================
+    Defines input files and everything required to run a fast and simple pipeline test.
+
+    Use as follows:
+        nextflow run nf-core/rnaseq -profile test,<docker/singularity>
+
+----------------------------------------------------------------------------------------
+*/
 
 params {
-  config_profile_name = 'Test profile'
-  config_profile_description = 'Minimal test dataset to check pipeline function'
-  // Limit resources so that this can run on GitHub Actions
-  max_cpus = 2
-  max_memory = 6.GB
-  max_time = 48.h
+    config_profile_name        = 'Test profile'
+    config_profile_description = 'Minimal test dataset to check pipeline function'
 
-  // Input data
-  // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
-  // TODO nf-core: Give any required params for the test so that command line flags are not needed
-  single_end = false
-  input_paths = [
-    ['Testdata', ['https://github.com/nf-core/test-datasets/raw/exoseq/testdata/Testdata_R1.tiny.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/exoseq/testdata/Testdata_R2.tiny.fastq.gz']],
-    ['SRR389222', ['https://github.com/nf-core/test-datasets/raw/methylseq/testdata/SRR389222_sub1.fastq.gz', 'https://github.com/nf-core/test-datasets/raw/methylseq/testdata/SRR389222_sub2.fastq.gz']]
-  ]
-  // Ignore `--input` as otherwise the parameter validation will throw an error
-  schema_ignore_params = 'genomes,input_paths,input'
+    // Limit resources so that this can run CI
+    max_cpus   = 2
+    max_memory = 6.GB
+    max_time   = 6.h
+
+    // Input data
+    input = 'https://raw.githubusercontent.com/nf-core/test-datasets/rnaseq/samplesheet/v3.1/samplesheet_test.csv'
+
+    // Genome references
+    fasta            = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/genome.fa'
+    gtf              = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/genes.gtf.gz'
+    gff              = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/genes.gff.gz'
+    transcript_fasta = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/transcriptome.fasta'
+    additional_fasta = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/gfp.fa.gz'
+
+    hisat2_index     = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/hisat2.tar.gz'
+    star_index       = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/star.tar.gz'
+    salmon_index     = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/salmon.tar.gz'
+    rsem_index       = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/rsem.tar.gz'
+
+    // Other parameters
+    pseudo_aligner      = 'salmon'
+    umitools_bc_pattern = 'NNNN'
+
+    // When using RSEM, remove warning from STAR whilst building tiny indices
+    modules {
+        'rsem_preparereference' {
+            args2 = "--genomeSAindexNbases 7"
+        }
+    }
 }
