--- a/conf/base.config
+++ b/conf/base.config
@@ -1,6 +1,6 @@
 /*
 ========================================================================================
-    nf-core/rnaseq Nextflow base config file
+    nf-core/rnavar Nextflow base config file
 ========================================================================================
     A 'blank slate' config file, appropriate for general use on most high performance
     compute environments. Assumes that all software is installed and available on
