changes based on PR1 review

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -33,5 +33,16 @@ params {
             publish_dir     = "${params.aligner}"
             publish_files   = ['out':'log', 'tab':'log']
         }
+        'samtools_sort_genome' {
+            suffix          = '.sorted'
+            publish_files   = [:]
+            publish_dir     = "${params.aligner}"
+        }
+        'samtools_index_genome' {
+            args            = ''
+            suffix          = '.sorted'
+            publish_files   = ['stats':'samtools_stats', 'flagstat':'samtools_stats', 'idxstats':'samtools_stats']
+            publish_dir     = "${params.aligner}"
+        }        
     }
 }
