Added steps upto SplitNCigar Reads

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -29,7 +29,7 @@ params {
             publish_dir     = 'genome/index'
         }
         'star_align' {
-            args            = '--quantMode TranscriptomeSAM --twopassMode Basic --outSAMtype BAM Unsorted --readFilesCommand zcat --runRNGseed 0 --outFilterMultimapNmax 20 --alignSJDBoverhangMin 1 --outSAMattributes NH HI AS NM MD --quantTranscriptomeBan Singleend'
+            args            = '--twopassMode Basic --outSAMtype BAM Unsorted --readFilesCommand zcat --sjdbOverhang 100'
             publish_dir     = "${params.aligner}"
             publish_files   = ['out':'log', 'tab':'log']
         }
@@ -43,6 +43,30 @@ params {
             suffix          = '.sorted'
             publish_files   = ['stats':'samtools_stats', 'flagstat':'samtools_stats', 'idxstats':'samtools_stats']
             publish_dir     = "${params.aligner}"
+        }
+        'picard_markduplicates' {
+            args            = 'ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
+            suffix          = '.markdup.sorted'
+            publish_files   = ['bam': '', 'metrics.txt':'picard_metrics']
+            publish_dir     = "${params.aligner}"
         }        
+        'picard_markduplicates_samtools' {
+            args            = ''
+            suffix          = '.markdup.sorted'
+            publish_files   = ['bai':'', 'csi':'', 'stats':'samtools_stats', 'flagstat':'samtools_stats', 'idxstats':'samtools_stats']
+            publish_dir     = "${params.aligner}"
+        }
+        'gatk_splitncigar_options' {
+            args            = ''
+            suffix          = '.split_cigar.bam'
+            publish_files   = ['bam': '', 'bai': '']
+            publish_dir     = "${params.aligner}"
+        }
+        'gatk_baserecalibrator' {
+            args            = ''
+            suffix          = ''
+            publish_files   = [:]
+            publish_dir     = "${params.aligner}/recalibrated"
+        }
     }
 }
