--- a/nextflow.config
+++ b/nextflow.config
@@ -60,6 +60,8 @@ params {
     save_align_intermeds       = false
     skip_markduplicates        = false
     skip_alignment             = false
+    skip_splitncigar           = false
+    skip_basecalibrator        = false
 
     // QC
     skip_qc                    = false
