Added steps upto SplitNCigar Reads

--- a/nextflow.config
+++ b/nextflow.config
@@ -47,7 +47,7 @@ params {
     ribo_database_manifest     = "${projectDir}/assets/rrna-db-defaults.txt"
 
     // Alignment
-    aligner                    = 'star_salmon'
+    aligner                    = 'star'
     pseudo_aligner             = null
     seq_center                 = null
     bam_csi_index              = false
