Added haplotype caller. Add a new sample sheet in assets to use new rnaseq data from repo

--- a/nextflow.config
+++ b/nextflow.config
@@ -62,6 +62,12 @@ params {
     skip_alignment             = false
     skip_splitncigar           = false
     skip_basecalibrator        = false
+    skip_applybqsr             = false
+    skip_haplotypecaller       = false
+    skip_intervallisttools     = false
+
+    // GATK parameters
+    scatter_count              = 6
 
     // QC
     skip_qc                    = false
