--- a/conf/modules.config
+++ b/conf/modules.config
@@ -29,7 +29,7 @@ params {
             publish_dir     = 'genome/index'
         }
         'star_align' {
-            args            = '--twopassMode Basic --outSAMtype BAM Unsorted --readFilesCommand zcat --sjdbOverhang 100'
+            args            = '--twopassMode Basic --outSAMtype BAM Unsorted --readFilesCommand zcat --sjdbOverhang 149'
             publish_dir     = "${params.aligner}"
             publish_files   = ['out':'log', 'tab':'log']
         }
@@ -67,6 +67,24 @@ params {
             suffix          = ''
             publish_files   = [:]
             publish_dir     = "${params.aligner}/recalibrated"
+        }
+        'gatk_applybqsr' {
+            args            = ''
+            suffix          = ''
+            publish_files   = [:]
+            publish_dir     = "${params.aligner}/recalibrated"
+        }
+        'gatk_haplotypecaller' {
+            args            = '-dont-use-soft-clipped-bases --standard-min-confidence-threshold-for-calling 20'
+            suffix          = ''
+            publish_files   = [:]
+            publish_dir     = "${params.aligner}/variants"
+        }
+        'gatk_intervallisttools' {
+            args            = '--SUBDIVISION_MODE BALANCING_WITHOUT_INTERVAL_SUBDIVISION_WITH_OVERFLOW --UNIQUE true --SORT true'
+            suffix          = ''
+            publish_files   = [:]
+            publish_dir     = "${params.aligner}/interval_lists"
         }
     }
 }
