--- a/conf/test.config
+++ b/conf/test.config
@@ -20,19 +20,25 @@ params {
     max_time   = 6.h
 
     // Input data
-    input = 'https://raw.githubusercontent.com/nf-core/test-datasets/rnaseq/samplesheet/v3.1/samplesheet_test.csv'
+    input = 'assets/samplesheet_valid.csv'
 
     // Genome references
-    fasta            = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/genome.fa'
-    gtf              = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/genes.gtf.gz'
-    gff              = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/genes.gff.gz'
-    transcript_fasta = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/transcriptome.fasta'
-    additional_fasta = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/gfp.fa.gz'
+    fasta               = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta'
+    fasta_fai           = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta.fai'
+    fasta_dict          = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.dict'
+    gtf                 = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.gtf'
+    gff                 = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/genes.gff.gz'
+    transcript_fasta    = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/transcriptome.fasta'
 
-    hisat2_index     = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/hisat2.tar.gz'
-    star_index       = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/star.tar.gz'
-    salmon_index     = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/salmon.tar.gz'
-    rsem_index       = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/rsem.tar.gz'
+    dbsnp_vcf           = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz'
+    dbsnp_vcf_index     = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz.tbi'
+    known_indels        = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/vcf/mills_and_1000G.indels.vcf.gz'
+    known_indels_index  = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/vcf/mills_and_1000G.indels.vcf.gz.tbi'
+
+    hisat2_index        = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/hisat2.tar.gz'
+    star_index          = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/index/star/star.tar.gz'
+    salmon_index        = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/salmon.tar.gz'
+    rsem_index          = 'https://github.com/nf-core/test-datasets/raw/rnaseq/reference/rsem.tar.gz'
 
     // Other parameters
     pseudo_aligner      = 'salmon'
