Issue fix required for the HC to run on splitted interval files

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -86,5 +86,31 @@ params {
             publish_files   = [:]
             publish_dir     = "${params.aligner}/interval_lists"
         }
+        // RECALIBRATE
+        'applybqsr' {
+            suffix           = '.recal'
+            publish_files    = false
+        }
+        'merge_bam_recalibrate' {
+            suffix           = '.recal'
+            publish_by_meta  = true
+            publish_files    = ['bam':'recalibrated']
+            publish_dir      = 'preprocessing'
+        }
+        'qualimap_bamqc_recalibrate' {
+            args             = '--paint-chromosome-limits --genome-gc-distr HUMAN -skip-duplicated --skip-dup-mode 0 -outformat HTML'
+            publish_by_meta  = true
+            publish_dir      = 'reports/qualimap'
+        }
+        'samtools_index_recalibrate' {
+            suffix           = 'recal'
+            publish_by_meta  = true
+            publish_dir      = 'preprocessing'
+            publish_files    = ['recal.bam':'recalibrated', 'recal.bam.bai':'recalibrated']
+        }
+        'samtools_stats_recalibrate' {
+            publish_by_meta  = true
+            publish_dir      = 'reports/samtools_stats'
+        }
     }
 }
