--- a/nextflow.config
+++ b/nextflow.config
@@ -68,6 +68,8 @@ params {
 
     // GATK parameters
     scatter_count              = 6
+    no_intervals               = false
+    skip_qc                    = null
 
     // QC
     skip_qc                    = false
