--- a/conf/modules.config
+++ b/conf/modules.config
@@ -112,5 +112,18 @@ params {
             publish_by_meta  = true
             publish_dir      = 'reports/samtools_stats'
         }
+        'gatk_mergevcfs' {
+            suffix           = 'haplotypecaller'
+            publish_by_meta  = true
+            publish_dir      = 'variant_calling'
+            publish_files    = ['vcf.gz':'haplotypecaller', 'vcf.gz.tbi':'haplotypecaller']
+        }
+        'gatk_variantfilter' {
+            args             = ''
+            suffix           = 'filtered'
+            publish_by_meta  = true
+            publish_dir      = 'variant_calling'
+            publish_files    = ['vcf.gz':'filtered', 'vcf.gz.tbi':'filtered']
+        }
     }
 }
