--- a/nextflow.config
+++ b/nextflow.config
@@ -65,11 +65,18 @@ params {
     skip_applybqsr             = false
     skip_haplotypecaller       = false
     skip_intervallisttools     = false
+    skip_variantfiltration     = false
 
     // GATK parameters
     scatter_count              = 6
     no_intervals               = false
     skip_qc                    = null
+
+    //GATK variant filter parameters
+    window                     = 35
+    cluster                    = 3
+    fs_filter                  = 30.0
+    qd_filter                  = 2.0
 
     // QC
     skip_qc                    = false
