Fixed issues when tested for multiple samples

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -123,7 +123,7 @@ params {
             suffix           = 'filtered'
             publish_by_meta  = true
             publish_dir      = 'variant_calling'
-            publish_files    = ['vcf.gz':'filtered', 'vcf.gz.tbi':'filtered']
+            publish_files    = ['vcf.gz':'haplotypecaller', 'vcf.gz.tbi':'haplotypecaller']
         }
     }
 }
