--- a/nextflow.config
+++ b/nextflow.config
@@ -237,8 +237,8 @@ dag {
 }
 
 manifest {
-    name            = 'nf-core/rnaseq'
-    author          = 'Phil Ewels, Rickard Hammarén'
+    name            = 'nf-core/rnavar'
+    author          = 'Praveen Raj'
     homePage        = 'https://github.com/nf-core/rnaseq'
     description     = 'Nextflow RNA-Seq analysis pipeline, part of the nf-core community.'
     mainScript      = 'main.nf'
