fix: update modules

--- a/modules/nf-core/modules/star/align/meta.yml
+++ b/modules/nf-core/modules/star/align/meta.yml
@@ -69,7 +69,12 @@ output:
       type: file
       description: STAR output tab file(s) (optional)
       pattern: "*.tab"
+  - junction:
+      type: file
+      description: STAR chimeric junction output file (optional)
+      pattern: "*.out.junction"
 
 authors:
   - "@kevinmenden"
   - "@drpatelh"
+  - "@praveenraj2018"
