fix: right paths to modules

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -125,5 +125,10 @@ params {
             publish_dir      = 'variant_calling'
             publish_files    = ['vcf.gz':'haplotypecaller', 'vcf.gz.tbi':'haplotypecaller']
         }
-    }
+        'fastqc' {
+            args = "--quiet"
+        }
+        'multiqc' {
+            args = ""
+        }    }
 }
