--- a/nextflow.config
+++ b/nextflow.config
@@ -20,6 +20,7 @@ params {
 
     // Alignment
     aligner                    = 'star'
+    star_ignore_sjdbgtf        = false
     seq_center                 = null
     save_merged_fastq          = false
     save_unaligned             = false
@@ -41,8 +42,8 @@ params {
     //GATK variant filter parameters
     window                     = 35
     cluster                    = 3
-    fs_filter                  = 30.0
-    qd_filter                  = 2.0
+    fs_filter                  = 30
+    qd_filter                  = 2
 
     // QC
     skip_qc                    = false
