fix: rename some files

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -58,7 +58,7 @@ params {
         }
         'gatk_splitncigar_options' {
             args            = ''
-            suffix          = '.split_cigar.bam'
+            suffix          = '.split_cigar'
             publish_files   = ['bam': '', 'bai': '']
             publish_dir     = "${params.aligner}"
         }
