fix: move modules to local

--- a/nextflow.config
+++ b/nextflow.config
@@ -22,6 +22,7 @@ params {
     aligner                    = 'star'
     star_ignore_sjdbgtf        = false
     seq_center                 = null
+    seq_platform               = 'illumina'
     save_merged_fastq          = false
     save_unaligned             = false
     save_align_intermeds       = false
