--- a/conf/modules.config
+++ b/conf/modules.config
@@ -92,7 +92,7 @@ params {
             publish_files    = false
         }
         'merge_bam_recalibrate' {
-            suffix           = '.recal'
+            suffix           = '.recal.merge'
             publish_by_meta  = true
             publish_files    = ['bam':'recalibrated']
             publish_dir      = 'preprocessing'
@@ -113,14 +113,14 @@ params {
             publish_dir      = 'reports/samtools_stats'
         }
         'gatk_mergevcfs' {
-            suffix           = 'haplotypecaller'
+            suffix           = '.haplotypecaller'
             publish_by_meta  = true
             publish_dir      = 'variant_calling'
             publish_files    = ['vcf.gz':'haplotypecaller', 'vcf.gz.tbi':'haplotypecaller']
         }
         'gatk_variantfilter' {
             args             = ''
-            suffix           = 'filtered'
+            suffix           = '.filtered'
             publish_by_meta  = true
             publish_dir      = 'variant_calling'
             publish_files    = ['vcf.gz':'haplotypecaller', 'vcf.gz.tbi':'haplotypecaller']
