--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -1,8 +1,2 @@
-files_unchanged:
-  - .github/ISSUE_TEMPLATE/bug_report.md
-  - .github/ISSUE_TEMPLATE/feature_request.md
-  - .github/PULL_REQUEST_TEMPLATE.md
-  - .gitignore
-  - assets/nf-core-rnavar_logo.png
-  - docs/images/nf-core-rnavar_logo.png
-  - lib/NfcoreSchema.groovy
+lint:
+  files_unchanged:
