--- a/nextflow.config
+++ b/nextflow.config
@@ -17,28 +17,35 @@ params {
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
     save_reference             = false
+    save_merged_fastq          = false
+    gene_bed                   = null
+    read_length                = 150
 
     // Alignment
     aligner                    = 'star'
+    star_index                 = null
     star_ignore_sjdbgtf        = false
     seq_center                 = null
     seq_platform               = 'illumina'
-    save_merged_fastq          = false
+    bam_csi_index              = false
     save_unaligned             = false
     save_align_intermeds       = false
-    skip_markduplicates        = false
-    skip_alignment             = false
-    skip_splitncigar           = false
-    skip_basecalibrator        = false
-    skip_applybqsr             = false
-    skip_haplotypecaller       = false
+
+    //Known variant references
+    known_indels               = null
+    known_indels_index         = null
+    dbsnp_vcf                  = null
+    dbsnp_vcf_index            = null
+
+    // Variant calling
+    no_intervals               = false
+
+    // Skip steps
     skip_intervallisttools     = false
     skip_variantfiltration     = false
 
-    // GATK parameters
+    // GATK intervallist parameters
     scatter_count              = 6
-    no_intervals               = false
-    skip_qc                    = null
 
     //GATK variant filter parameters
     window                     = 35
@@ -48,18 +55,6 @@ params {
 
     // QC
     skip_qc                    = false
-    skip_bigwig                = false
-    skip_stringtie             = false
-    skip_fastqc                = false
-    skip_preseq                = false
-    skip_dupradar              = false
-    skip_qualimap              = false
-    skip_rseqc                 = false
-    skip_biotype_qc            = false
-    skip_deseq2_qc             = false
-    skip_multiqc               = false
-    deseq2_vst                 = false
-    rseqc_modules              = 'bam_stat,inner_distance,infer_experiment,junction_annotation,junction_saturation,read_distribution,read_duplication'
 
     // MultiQC options
     multiqc_config             = null
