Fix: warnings, lint errors, code cleanup, docs

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -26,6 +26,7 @@ params {
             publish_dir     = 'fastq'
         }
         'star_genomegenerate' {
+            args            = "--sjdbOverhang ${params.read_length - 1}"
             publish_dir     = 'genome/index'
         }
         'star_align' {
@@ -46,12 +47,14 @@ params {
             suffix          = '.markdup.sorted'
             publish_files   = ['bam': '', 'metrics.txt':'picard_metrics']
             publish_dir     = "preprocessing"
+            publish_by_meta  = true
         }
         'picard_markduplicates_samtools' {
             args            = ''
             suffix          = '.markdup.sorted'
             publish_files   = ['bai':'', 'csi':'', 'stats':'samtools_stats', 'flagstat':'samtools_stats', 'idxstats':'samtools_stats']
             publish_dir     = "preprocessing"
+            publish_by_meta  = true
         }
         'gatk_splitncigar_options' {
             args            = ''
@@ -76,6 +79,10 @@ params {
         'gatk_intervallisttools' {
             args            = '--SUBDIVISION_MODE BALANCING_WITHOUT_INTERVAL_SUBDIVISION_WITH_OVERFLOW --UNIQUE true --SORT true'
             suffix          = ''
+            publish_files   = false
+        }
+        'gatk_bedtointervallist' {
+            args            = ''
             publish_files   = false
         }
         // RECALIBRATE
@@ -113,9 +120,12 @@ params {
             publish_files    = ['vcf':'', 'vcf.idx':'']
         }
         'fastqc' {
-            args = "--quiet"
+            args             = "--quiet"
+            publish_files    = false
         }
         'multiqc' {
-            args = ""
-        }    }
+            args             = ""
+            publish_dir      = 'reports'
+        }
+    }
 }
