--- a/nextflow.config
+++ b/nextflow.config
@@ -9,24 +9,28 @@
 // Global default params, used in configs
 params {
 
-    // Input options
-    input                      = null
+    // Pipeline options
 
-    // References
+    // Mandatory option
+    input                      = null // sample sheet
+
+    // Genome and reference options
     genome                     = null
     igenomes_base              = 's3://ngi-igenomes/igenomes'
     igenomes_ignore            = false
     save_reference             = false
     save_merged_fastq          = false
-    gene_bed                   = null
-    read_length                = 150
+    gtf                        = null
+
+    // Sequence read information
+    read_length                = 150 // Required for STAR to build index and align reads
 
     // Alignment
-    aligner                    = 'star'
-    star_index                 = null
-    star_ignore_sjdbgtf        = false
+    aligner                    = 'star' // Only STAR is currently supported.
+    star_index                 = null // Provide STAR index if there is already a pre-defined one, or set to null to create one by the pipeline
+    star_ignore_sjdbgtf        = false // Ignore GTF file while creating index or alignment by STAR
     seq_center                 = null
-    seq_platform               = 'illumina'
+    seq_platform               = 'illumina' // Required for preparing for BAM headers for GATK to work
     bam_csi_index              = false
     save_unaligned             = false
     save_align_intermeds       = false
