--- a/conf/modules.config
+++ b/conf/modules.config
@@ -22,11 +22,110 @@
 
 params {
     modules {
+        'cat_fastq' {
+            publish_dir     = 'fastq'
+        }
+        'star_genomegenerate' {
+            args            = "--sjdbOverhang ${params.read_length - 1}"
+            publish_dir     = 'genome/index'
+        }
+        'star_align' {
+            args            = "--twopassMode Basic --outSAMtype BAM Unsorted --readFilesCommand zcat --sjdbOverhang ${params.read_length - 1}"
+            publish_files   = false
+        }
+        'samtools_sort_genome' {
+            suffix          = '.sorted'
+            publish_files   = false
+        }
+        'samtools_index_genome' {
+            args            = ''
+            suffix          = '.sorted'
+            publish_files   = false
+        }
+        'picard_markduplicates' {
+            args            = 'ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
+            suffix          = '.markdup.sorted'
+            publish_files   = ['bam': '', 'metrics.txt':'picard_metrics']
+            publish_dir     = "preprocessing"
+            publish_by_meta  = true
+        }
+        'picard_markduplicates_samtools' {
+            args            = ''
+            suffix          = '.markdup.sorted'
+            publish_files   = ['bai':'', 'csi':'', 'stats':'samtools_stats', 'flagstat':'samtools_stats', 'idxstats':'samtools_stats']
+            publish_dir     = "preprocessing"
+            publish_by_meta  = true
+        }
+        'gatk_splitncigar_options' {
+            args            = ''
+            suffix          = '.split_cigar'
+            publish_files   = false
+        }
+        'gatk_baserecalibrator' {
+            args            = ''
+            suffix          = ''
+            publish_files   = false
+        }
+        'gatk_applybqsr' {
+            args            = ''
+            suffix          = '.markdup.recalibrated'
+            publish_files   = false
+        }
+        'gatk_haplotypecaller' {
+            args            = '-dont-use-soft-clipped-bases --standard-min-confidence-threshold-for-calling 20'
+            suffix          = ''
+            publish_files   = false
+        }
+        'gatk_intervallisttools' {
+            args            = '--SUBDIVISION_MODE BALANCING_WITHOUT_INTERVAL_SUBDIVISION_WITH_OVERFLOW --UNIQUE true --SORT true'
+            suffix          = ''
+            publish_files   = false
+        }
+        'gatk_bedtointervallist' {
+            args            = ''
+            publish_files   = false
+        }
+        // RECALIBRATE
+        'applybqsr' {
+            suffix           = '.recal'
+            publish_files    = false
+        }
+        'merge_bam_recalibrate' {
+            suffix           = '.recal.merge'
+            publish_by_meta  = true
+            publish_files    = ['bam':'', 'bai':'']
+            publish_dir      = 'preprocessing'
+        }
+        'samtools_index_recalibrate' {
+            suffix           = 'recalibrated'
+            publish_by_meta  = true
+            publish_dir      = 'preprocessing'
+            publish_files    = ['bam':'', 'bai':'']
+        }
+        'samtools_stats_recalibrate' {
+            publish_by_meta  = true
+            publish_dir      = 'reports/samtools_stats'
+        }
+        'gatk_mergevcfs' {
+            suffix           = '.haplotypecaller'
+            publish_by_meta  = true
+            publish_dir      = 'variant_calling'
+            publish_files    = ['vcf.gz':'', 'vcf.gz.tbi':'']
+        }
+        'gatk_variantfilter' {
+            args             = ''
+            suffix           = '.filtered'
+            publish_by_meta  = true
+            publish_dir      = 'variant_filtering'
+            publish_files    = ['vcf':'', 'vcf.idx':'']
+        }
         'fastqc' {
-            args = "--quiet"
+            args             = "--quiet"
+            publish_files    = false
         }
         'multiqc' {
-            args = ""
+            args             = ""
+            publish_dir      = 'reports'
         }
     }
 }
