fixes; code cleanup; replaced local gatk4 modules with repo modules; testing

--- a/conf/test.config
+++ b/conf/test.config
@@ -20,7 +20,8 @@ params {
     max_time   = 6.h
 
     // Input data
-    input = 'assets/samplesheet_test.csv'
+    //input = 'assets/samplesheet_test.csv'
+    input = 'assets/samplesheet_full.csv'
 
     // Genome references
     fasta               = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta'
