--- a/conf/modules.config
+++ b/conf/modules.config
@@ -112,12 +112,19 @@ params {
             publish_dir      = 'variant_calling'
             publish_files    = ['vcf.gz':'', 'vcf.gz.tbi':'']
         }
+        'gatk_indexfeaturefile' {
+            args             = ''
+            suffix           = '.haplotypecaller'
+            publish_by_meta  = true
+            publish_dir      = 'variant_calling'
+            publish_files    = ['vcf.gz':'', 'vcf.gz.tbi':'']
+        }
         'gatk_variantfilter' {
             args             = ''
             suffix           = '.filtered'
             publish_by_meta  = true
             publish_dir      = 'variant_filtering'
-            publish_files    = ['vcf':'', 'vcf.idx':'']
+            publish_files    = ['vcf.gz':'', 'vcf.gz.tbi':'']
         }
         'fastqc' {
             args             = "--quiet"
