--- a/conf/test.config
+++ b/conf/test.config
@@ -20,8 +20,7 @@ params {
     max_time   = 6.h
 
     // Input data
-    //input = 'assets/samplesheet_test.csv'
-    input = 'assets/samplesheet_full.csv'
+    input = 'assets/samplesheet_test.csv'
 
     // Genome references
     fasta               = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta'
