update: samtools and picard modules updated to latest version from nf-core.

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,6 +13,9 @@ params {
 
     // Mandatory option
     input                      = null // sample sheet
+    fasta                      = null
+    fasta_dict                 = null
+    fasta_fai                  = null
 
     // Genome and reference options
     genome                     = null
