Added variant annotation subworkflow having snpeff and VEP

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -126,6 +126,37 @@ params {
             publish_dir      = 'variant_filtering'
             publish_files    = ['vcf.gz':'', 'vcf.gz.tbi':'']
         }
+        // ANNOTATE
+        'snpeff' {
+            args             = '-nodownload -canon -v'
+            publish_files    = false
+            tag_base         = '5.0'
+        }
+        'bgziptabix_snpeff' {
+            publish_dir      = 'variant_annotation'
+            suffix           = '_snpEff.ann'
+            publish_by_meta  = true
+        }
+        'merge_vep' {
+            args             = '--everything --filter_common --per_gene --total_length --offline'
+            publish_files    = false
+        }
+        'bgziptabix_merge_vep' {
+            publish_dir      = 'annotation'
+            suffix           = '_snpEff_VEP.ann'
+            publish_by_meta  = true
+        }
+        'ensemblvep' {
+            args             = '--everything --filter_common --per_gene --total_length --offline'
+            publish_files    = false
+            tag_base         = '104.3'
+        }
+        'bgziptabix_vep' {
+            publish_dir      = 'annotation'
+            suffix           = '_VEP.ann'
+            publish_by_meta  = true
+        }
+        // QC modules
         'fastqc' {
             args             = "--quiet"
             publish_files    = false
