--- a/conf/test.config
+++ b/conf/test.config
@@ -27,6 +27,7 @@ params {
     fasta_fai           = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta.fai'
     dict                = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.dict'
     gtf                 = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.gtf'
+    gene_bed            = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.bed'
 
     // Known genome resources (optional)
     dbsnp               = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz'
@@ -36,4 +37,11 @@ params {
 
     // STAR index (optional)
     star_index          = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/index/star/star.tar.gz'
+
+    // Annotation
+    snpeff_db           = 'GRCh38.99'
+    vep_genome          = 'GRCh38.p13'
+    vep_cache_version   = '104'
+    vep_species         = 'homo_sapiens'
+
 }
