params.genome parameter added in test.config

--- a/conf/test.config
+++ b/conf/test.config
@@ -23,6 +23,7 @@ params {
     input = 'assets/samplesheet_test.csv'
 
     // Genome references
+    genome              = 'GRCh38'
     fasta               = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta'
     fasta_fai           = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta.fai'
     dict                = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.dict'
