fix: capture ch_versions from annotate sub-workflow

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -142,7 +142,7 @@ params {
             publish_files    = false
         }
         'bgziptabix_merge_vep' {
-            publish_dir      = 'annotation'
+            publish_dir      = 'variant_annotation'
             suffix           = '_snpEff_VEP.ann'
             publish_by_meta  = true
         }
@@ -152,7 +152,7 @@ params {
             tag_base         = '104.3'
         }
         'bgziptabix_vep' {
-            publish_dir      = 'annotation'
+            publish_dir      = 'variant_annotation'
             suffix           = '_VEP.ann'
             publish_by_meta  = true
         }
