update: snp and vep genome dataases in test.config

--- a/conf/test.config
+++ b/conf/test.config
@@ -23,7 +23,7 @@ params {
     input = 'assets/samplesheet_test.csv'
 
     // Genome references
-    genome              = 'GRCh38'
+    genome              = 'WBcel235'
     fasta               = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta'
     fasta_fai           = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta.fai'
     dict                = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.dict'
@@ -40,9 +40,9 @@ params {
     star_index          = 'https://github.com/nf-core/test-datasets/raw/modules/data/genomics/homo_sapiens/genome/index/star/star.tar.gz'
 
     // Annotation
-    snpeff_db           = 'GRCh38.99'
-    vep_genome          = 'GRCh38.p13'
+    snpeff_db           = 'WBcel235.99'
+    vep_genome          = 'WBcel235'
+    vep_species         = 'caenorhabditis_elegans'
     vep_cache_version   = '104'
-    vep_species         = 'homo_sapiens'
 
 }
