--- a/nextflow.config
+++ b/nextflow.config
@@ -37,7 +37,7 @@ params {
     no_intervals               = false
 
     // Variant annotation
-    annotate_tools             = 'snpeff' // List of annotation tools to run - snpeff or vep or merge
+    annotate_tools             = 'merge' // List of annotation tools to run - snpeff or vep or merge
     annotation_cache           = false // Annotation cache disabled
     cadd_cache                 = null // CADD cache disabled
     cadd_indels                = false // No CADD InDels file
