fix: lint errors on issue templates

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -10,7 +10,7 @@ body:
         Before you post this issue, please check the documentation:
 
         - [nf-core website: troubleshooting](https://nf-co.re/usage/troubleshooting)
-        - [nf-core/sarek pipeline documentation](https://nf-co.re/sarek/usage)
+        - [nf-core/rnavar pipeline documentation](https://nf-co.re/rnavar/usage)
 
   - type: textarea
     id: description
@@ -49,4 +49,4 @@ body:
         * Executor _(eg. slurm, local, awsbatch)_
         * Container engine: _(e.g. Docker, Singularity, Conda, Podman, Shifter or Charliecloud)_
         * OS _(eg. CentOS Linux, macOS, Linux Mint)_
-        * Version of nf-core/sarek _(eg. 1.1, 1.5, 1.8.2)_
+        * Version of nf-core/rnavar _(eg. 1.1, 1.5, 1.8.2)_
