--- a/conf/modules.config
+++ b/conf/modules.config
@@ -30,7 +30,7 @@ params {
             publish_dir     = 'genome/index'
         }
         'star_align' {
-            args            = "--twopassMode Basic --outSAMtype BAM Unsorted --readFilesCommand zcat --sjdbOverhang ${params.read_length - 1}"
+            args            = "--outSAMtype BAM Unsorted --readFilesCommand zcat --sjdbOverhang ${params.read_length - 1}"
             publish_files   = false
         }
         'samtools_sort_genome' {
@@ -43,7 +43,7 @@ params {
             publish_files   = false
         }
         'picard_markduplicates' {
-            args            = 'ASSUME_SORTED=true REMOVE_DUPLICATES=false VALIDATION_STRINGENCY=LENIENT TMP_DIR=tmp'
+            args            = 'ASSUME_SORTED=true VALIDATION_STRINGENCY=LENIENT'
             suffix          = '.markdup.sorted'
             publish_files   = ['bam': '', 'metrics.txt':'picard_metrics']
             publish_dir     = "preprocessing"
