Update: parelle process for splitNcigar

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -37,6 +37,10 @@ params {
             suffix          = '.sorted'
             publish_files   = false
         }
+        'samtools_merge_genome' {
+            suffix          = '.merged'
+            publish_files   = false
+        }
         'samtools_index_genome' {
             args            = ''
             suffix          = '.sorted'
