Fix: custom star index version check; --vcf syntax update for VEP

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -138,7 +138,7 @@ params {
         }
         'bgziptabix_snpeff' {
             publish_dir      = 'variant_annotation'
-            suffix           = '_snpEff.ann'
+            suffix           = '_snpEff.ann.vcf'
             publish_by_meta  = true
         }
         'merge_vep' {
@@ -147,7 +147,7 @@ params {
         }
         'bgziptabix_merge_vep' {
             publish_dir      = 'variant_annotation'
-            suffix           = '_snpEff_VEP.ann'
+            suffix           = '_snpEff_VEP.ann.vcf'
             publish_by_meta  = true
         }
         'ensemblvep' {
@@ -157,7 +157,7 @@ params {
         }
         'bgziptabix_vep' {
             publish_dir      = 'variant_annotation'
-            suffix           = '_VEP.ann'
+            suffix           = '_VEP.ann.vcf'
             publish_by_meta  = true
         }
         // QC modules
