Added GATK parameters

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -66,17 +66,17 @@ params {
             publish_files   = false
         }
         'gatk_baserecalibrator' {
-            args            = ''
+            args            = '--use-original-qualities'
             suffix          = ''
             publish_files   = false
         }
         'gatk_applybqsr' {
-            args            = ''
+            args            = '--use-original-qualities --add-output-sam-program-record'
             suffix          = '.markdup.recalibrated'
             publish_files   = false
         }
         'gatk_haplotypecaller' {
-            args            = '-dont-use-soft-clipped-bases --standard-min-confidence-threshold-for-calling 20'
+            args            = '-dont-use-soft-clipped-bases'
             suffix          = ''
             publish_files   = false
         }
