--- a/nextflow.config
+++ b/nextflow.config
@@ -22,7 +22,7 @@ params {
     save_merged_fastq          = false
 
     // Sequence read information
-    read_length                = 150 // Required for STAR to build index and align reads
+    read_length                = 151 // Required for STAR to build index and align reads
 
     // Alignment
     aligner                    = 'star' // Only STAR is currently supported.
@@ -59,6 +59,9 @@ params {
 
     // GATK intervallist parameters
     scatter_count              = 50
+
+    //GATK haplotypecaller parameters
+    stand_call_conf            = 20
 
     //GATK variant filter parameters
     window                     = 35
