Fix: Test errors

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -31,11 +31,15 @@ params {
         }
         'star_align' {
             args            = "--outSAMtype BAM Unsorted --readFilesCommand zcat --sjdbOverhang ${params.read_length - 1}"
-            publish_files   = false
+            publish_dir     = "preprocessing"
+            publish_files   = [:]
+            publish_by_meta = true
         }
         'samtools_sort_genome' {
             suffix          = '.sorted'
-            publish_files   = false
+            publish_files   = [:]
+            publish_dir     = "preprocessing"
+            publish_by_meta = true
         }
         'samtools_merge_genome' {
             suffix          = '.merged'
