--- a/nextflow.config
+++ b/nextflow.config
@@ -44,10 +44,10 @@ params {
     annotate_tools             = 'merge' // List of annotation tools to run - snpeff or vep or merge
     annotation_cache           = false // Annotation cache disabled
     cadd_cache                 = null // CADD cache disabled
-    cadd_indels                = false // No CADD InDels file
-    cadd_indels_tbi            = false // No CADD InDels index
-    cadd_wg_snvs               = false // No CADD SNVs file
-    cadd_wg_snvs_tbi           = false // No CADD SNVs index
+    cadd_indels                = null // No CADD InDels file
+    cadd_indels_tbi            = null // No CADD InDels index
+    cadd_wg_snvs               = null // No CADD SNVs file
+    cadd_wg_snvs_tbi           = null // No CADD SNVs index
     genesplicer                = null // genesplicer disabled within VEP
     snpeff_cache               = null // No directory for snpEff cache
     vep_cache                  = null // No directory for VEP cache
