Fix: Test errors - attempt 3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,11 +26,6 @@ jobs:
           # Test latest edge release of Nextflow
           - NXF_VER: ''
             NXF_EDGE: '1'
-        test:
-          - 'aligner'
-          - 'annotation'
-          - 'default'
-          # - 'variant_calling'
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
@@ -54,4 +49,4 @@ jobs:
         run: python -m pip install --upgrade pip pytest-workflow
 
       - name: Run pipeline with tests settings
-        run: pytest --tag ${{ matrix.test }} --kwdof
+        run: nextflow run {GITHUB_WORKSPACE} -profile test,docker
