--- a/conf/test.config
+++ b/conf/test.config
@@ -20,7 +20,7 @@ params {
     max_time   = 6.h
 
     // Input data
-    input = 'assets/samplesheet_test.csv'
+    input = "${baseDir}/tests/csv/samplesheet_test.csv"
 
     // Genome references
     genome              = 'WBcel235'
