--- a/tests/test_annotation.yml
+++ b/tests/test_annotation.yml
@@ -24,5 +24,5 @@
   files:
     - path: results/variant_annotation/GM12878/GM12878_snpEff.ann.vcf.gz
     - path: results/variant_annotation/GM12878/GM12878_snpEff.ann.vcf.gz.tbi
-    - - path: results/variant_annotation/GM12878/GM12878_snpEff_VEP.ann.vcf.gz
+    - path: results/variant_annotation/GM12878/GM12878_snpEff_VEP.ann.vcf.gz
     - path: results/variant_annotation/GM12878/GM12878_snpEff_VEP.ann.vcf.gz.tbi
