Fix: CI tests - attempt 2

--- a/tests/config/nextflow.config
+++ b/tests/config/nextflow.config
@@ -1,5 +1,5 @@
 params {
-    outdir = "output/"
+    outdir = "results/"
     publish_dir_mode = "copy"
     enable_conda = false
     singularity_pull_docker_container = false
@@ -25,7 +25,7 @@ if ("$PROFILE" == "singularity") {
 }
 
 // Load test_data.config containing paths to test data
-includeConfig 'test_data.config'
+// includeConfig 'test_data.config'
 
 // Load modules.config for default module params
 includeConfig '../../conf/modules.config'
