Fix: CI tests - attempt 3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         test:
           - 'default'
           - 'annotation'
-          # - 'removeduplicates'
+          - 'removeduplicates'
     steps:
       - name: Check out pipeline code
         uses: actions/checkout@v2
