Fix: CI test errors

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -75,9 +75,21 @@ params {
             publish_files   = false
         }
         'gatk_applybqsr' {
-            args            = '--use-original-qualities --add-output-sam-program-record'
-            suffix          = '.markdup.recalibrated'
-            publish_files   = false
+            args             = '--use-original-qualities --add-output-sam-program-record'
+            suffix           = '.recal'
+            publish_by_meta  = true
+            publish_dir      = 'preprocessing'
+            publish_files    = ['bam':'', 'bai':'']
+        }
+        'samtools_index_recalibrate' {
+            suffix           = '.recal'
+            publish_by_meta  = true
+            publish_dir      = 'preprocessing'
+            publish_files    = ['bai':'']
+        }
+        'samtools_stats_recalibrate' {
+            publish_by_meta  = true
+            publish_dir      = 'reports/samtools_stats'
         }
         'gatk_haplotypecaller' {
             args            = '-dont-use-soft-clipped-bases'
@@ -92,27 +104,6 @@ params {
         'gatk_bedtointervallist' {
             args            = ''
             publish_files   = false
-        }
-        // RECALIBRATE
-        'applybqsr' {
-            suffix           = '.recal'
-            publish_files    = false
-        }
-        'merge_bam_recalibrate' {
-            suffix           = '.recal.merge'
-            publish_by_meta  = true
-            publish_files    = ['bam':'', 'bai':'']
-            publish_dir      = 'preprocessing'
-        }
-        'samtools_index_recalibrate' {
-            suffix           = 'recalibrated'
-            publish_by_meta  = true
-            publish_dir      = 'preprocessing'
-            publish_files    = ['bam':'', 'bai':'']
-        }
-        'samtools_stats_recalibrate' {
-            publish_by_meta  = true
-            publish_dir      = 'reports/samtools_stats'
         }
         'gatk_mergevcfs' {
             suffix           = '.haplotypecaller'
