--- a/tests/test_default.yml
+++ b/tests/test_default.yml
@@ -5,8 +5,8 @@
     - preprocessing
   files:
     - path: results/reports/multiqc_report.html
-    - path: results/preprocessing/GM12878/GM12878.recal.merge.bam
-    - path: results/preprocessing/GM12878/GM12878.recal.merge.bam.bai
+    - path: results/preprocessing/GM12878/GM12878.recal.bam
+    - path: results/preprocessing/GM12878/GM12878.recal.bam.bai
     - path: results/variant_calling/GM12878/GM12878.haplotypecaller.vcf.gz
     - path: results/variant_calling/GM12878/GM12878.haplotypecaller.vcf.gz.tbi
     - path: results/variant_filtering/GM12878/GM12878.filtered.vcf.gz
