--- a/tests/test_annotation.yml
+++ b/tests/test_annotation.yml
@@ -6,6 +6,7 @@
   files:
     - path: results/variant_annotation/GM12878/GM12878_snpEff.ann.vcf.gz
     - path: results/variant_annotation/GM12878/GM12878_snpEff.ann.vcf.gz.tbi
+    - path: results/reports/multiqc_report.html
 - name: Run VEP
   command: nextflow run main.nf -profile test,docker --annotate_tools vep
   tags:
@@ -14,6 +15,7 @@
   files:
     - path: results/variant_annotation/GM12878/GM12878_VEP.ann.vcf.gz
     - path: results/variant_annotation/GM12878/GM12878_VEP.ann.vcf.gz.tbi
+    - path: results/reports/multiqc_report.html
 - name: Run snpEff followed by VEP
   command: nextflow run main.nf -profile test,docker --annotate_tools merge
   tags:
@@ -26,3 +28,4 @@
     - path: results/variant_annotation/GM12878/GM12878_snpEff.ann.vcf.gz.tbi
     - path: results/variant_annotation/GM12878/GM12878_snpEff_VEP.ann.vcf.gz
     - path: results/variant_annotation/GM12878/GM12878_snpEff_VEP.ann.vcf.gz.tbi
+    - path: results/reports/multiqc_report.html
