--- a/nextflow.config
+++ b/nextflow.config
@@ -114,6 +114,12 @@ includeConfig 'conf/base.config'
 // Load modules.config for DSL2 module specific options
 includeConfig 'conf/modules.config'
 
+// Load nf-core custom profiles from different Institutions
+try {
+    includeConfig "${params.custom_config_base}/nfcore_custom.config"
+} catch (Exception e) {
+    System.err.println("WARNING: Could not load nf-core/config profiles: ${params.custom_config_base}/nfcore_custom.config")
+}
 // Load nf-core/rnavar custom profiles from different Institutions
 try {
     includeConfig "${params.custom_config_base}/pipeline/rnavar.config"
